--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^6.4.8",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.13",
+    "axios": "^1.8.4",
     "framer-motion": "^12.5.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.479.0",
+    "npm": "^11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.13"
   },
